added image folder

--- a/TeachUs/index.html
+++ b/TeachUs/index.html
@@ -434,7 +434,7 @@
 									<img class="img-fluid" src="img/ai.jpg" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
-									<p>25 August, 2020</p>
+									<p>12 August, 2020</p>
 									<a href="#"><h4>AI an emerging field</h4></a>
 									<p>
 										How AI is changing thw world and how it can be boon for education industry. No prior knowledge of AI is required.
@@ -446,11 +446,10 @@
 									<img class="img-fluid" src="img/mhrd.jpg" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
-									<p>25th February, 2018</p>
-									<a href="#"><h4>The Universe Through
-									A Child S Eyes</h4></a>
+									<p>15 August , 2020</p>
+									<a href="#"><h4>Zoom : Is it safe?</h4></a>
 									<p>
-										For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
+										A webinar organized by DDLF to know about the safety issues related to Zoom and what are the other alternatives to use.
 									</p>
 								</div>
 							</div>	
@@ -459,40 +458,15 @@
 									<img class="img-fluid" src="img/mhrd.jpg" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
-									<p>25th February, 2018</p>
-									<a href="#"><h4>The Universe Through
-									A Child S Eyes</h4></a>
+									<p>30-31 August, 2020</p>
+									<a href="#"><h4>A two day yoga workshop</h4></a>
 									<p>
-										For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
+										“The practice of yoga, as Prime Minister (Narendra) Modi has emphasised, offers a holistic way of keeping mentally and physically fit during these challenging times".The national teacher association is organizing a two day session of yoga classes from 30 August to 31 August to promote ‘healthy’ and ‘cheerful’ living.
 									</p>
 								</div>
 							</div>
-							<div class="single-carusel row align-items-center">
-								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="img/mhrd.jpg" alt="">
-								</div>
-								<div class="detials col-12 col-md-6">
-									<p>25th February, 2018</p>
-									<a href="#"><h4>The Universe Through
-									A Child S Eyes</h4></a>
-									<p>
-										For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-									</p>
-								</div>
-							</div>	
-							<div class="single-carusel row align-items-center">
-								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="img/mhrd.jpg" alt="">
-								</div>
-								<div class="detials col-12 col-md-6">
-									<p>25th February, 2018</p>
-									<a href="#"><h4>The Universe Through
-									A Child S Eyes</h4></a>
-									<p>
-										For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
-									</p>
-								</div>
-							</div>																						
+							
+																													
 						</div>
 					</div>
 				</div>	
